hq sandbox - latest/src/objects/Solution.object
<CustomObject>
    <fields>
        <fullName>Apto_Article_Link__c</fullName>
        <label>Apto Article Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Salesforce_Article_Link__c</fullName>
        <label>Salesforce Article Link</label>
        <type>Url</type>
    </fields>
</CustomObject>